# rusty-kodi

./: Cargo.toml  README.md
kodi-jsonrpc-client/: Cargo.toml  README.md  methods.json  schema.json
kodi-jsonrpc-client/src/: lib.rs  main.rs  methods.rs  types.rs
kodi-mpd-proxy/: Cargo.toml  README.md
kodi-mpd-proxy/src/: main.rs  player.rs
mpd-server-protocol/: Cargo.toml  README.md
mpd-server-protocol/src/: lib.rs  tags.rs
