[package]
name = "kodi-jsonrpc-client"
version = "0.1.0"
authors = ["marmeladema <xademax@gmail.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
enumset = { version = "1.0", features = ["serde"] }
paste = "1"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0"}
tokio = { version = "0.2", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"

[build-dependencies]
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0"}
