[package]
name = "kodi-mpd-proxy"
version = "0.1.0"
authors = ["marmeladema <xademax@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
bstr = "0.2"
clap = "3.0.0-beta.2"
enum-map = "0.6"
enumset = { version = "1.0", features = ["serde"] }
kodi-jsonrpc-client = { path = "../kodi-jsonrpc-client" }
mpd-server-protocol = { path = "../mpd-server-protocol" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.2"
