[package]
name = "mpd-server-protocol"
version = "0.1.0"
authors = ["marmeladema <xademax@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "0.1"
bstr = "0.2"
chrono = "0.4"
enum-map = "0.6"
enumset = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
url = "2"
